spacing issue fixed and icons folder added

--- a/src/style.css
+++ b/src/style.css
@@ -690,17 +690,16 @@ body {
   flex-basis: 0;
   min-height: 0;
   overflow-y: auto;
-  padding: 40px 0;
-  display: flex;
-  justify-content: center;
+  padding: 40px 0 25px;
 }
 
 .editor-document-paper {
   width: 100%;
   max-width: 800px;
-  padding: 0 40px;
+  padding: 0 24px;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 /* Page Title Section */
